--- a/1.0/tr/kap-orgusu/aralik-duzeni.html
+++ b/1.0/tr/kap-orgusu/aralik-duzeni.html
@@ -24,17 +24,17 @@ title: Aralık Düzeni
 	  <div data-gnl="3-| 3 |-3 12p">
 	  	3-| 3 |-3 12p <br><br> 12'de 3 parça soldan öteler. 12'de 3 parça genişliği olur. 12'de 3 parça sağdan öteler. Bunlar 12p düzeninde oluşur.
 	  </div>
-	  <div data-gnl="3-| 3 |-3">
-	    3-| 3 |-3 <br><br> 24'de 3 parça soldan öteler. 24'de 3 parça genişliği olur. 24'de 3 parça sağdan öteler. Bunlar varsayılan tanımlı 24p düzeninde oluşur.
+	  <div data-gnl="3-| 6 |-3">
+	    3-| 6 |-3 <br><br> 24'de 3 parça soldan öteler. 24'de 3 parça genişliği olur. 24'de 3 parça sağdan öteler. Bunlar varsayılan tanımlı 24p düzeninde oluşur.
 	  </div>
-	  <div data-gnl="3-| 3 |-3 12p-| |-12p">
-	    3-| 3 |-3 12p-| |-12p <br><br> 12'de 3 parça soldan öteler. 24'de 3 parça genişliği olur. 12'de 3 parça sağdan öteler. Bunlar varsayılan tanımlı 24p düzeninde oluşur ancak yanlardan aralık vermeler 12p düzeninde oluşur.
-	  </div>
-	  <div data-gnl="3-| 1g |-3">
-	    3-| 1g |-3 <br><br> 24'de 3 parça soldan öteler. 1 oranında genleşme olur. 24'de 3 parça sağdan öteler. Bunlar varsayılan tanımlı 24p düzeninde oluşur.
+	  <div data-gnl="3-| 6 |-3 12p-| |-12p">
+	    3-| 6 |-3 12p-| |-12p <br><br> 12'de 3 parça soldan öteler. 24'de 3 parça genişliği olur. 12'de 3 parça sağdan öteler. Bunlar varsayılan tanımlı 24p düzeninde oluşur ancak yanlardan aralık vermeler 12p düzeninde oluşur.
 	  </div>
 	  <div data-gnl="3-| 2g |-3">
-	    3-| 2g |-3 <br><br> 24'de 3 parça soldan öteler. 2 oranında genleşme olur. Yani 1g tanımlı alanın 2 katı kadar genleşme sayımlaması yapılır. 24'de 3 parça sağdan öteler. Bunlar varsayılan tanımlı 24p düzeninde oluşur.
+	    3-| 2g |-3 <br><br> 24'de 3 parça soldan öteler. 2 oranında genleşme olur. 24'de 3 parça sağdan öteler. Bunlar varsayılan tanımlı 24p düzeninde oluşur.
+	  </div>
+	  <div data-gnl="3-| 3g |-3">
+	    3-| 3g |-3 <br><br> 24'de 3 parça soldan öteler. 3 oranında genleşme olur. Yani 2g tanımlı alana göre genleşme sayımlaması yapılır. 24'de 3 parça sağdan öteler. Bunlar varsayılan tanımlı 24p düzeninde oluşur.
 	  </div>
 	</div>
 	</div>
@@ -42,17 +42,17 @@ title: Aralık Düzeni
 	<div data-gnl="3-| 3 |-3 12p">
 		3-| 3 |-3 12p <br><br> 12'de 3 parça soldan öteler. 12'de 3 parça genişliği olur. 12'de 3 parça sağdan öteler. Bunlar 12p düzeninde oluşur.
 	</div>
-	<div data-gnl="3-| 3 |-3">
-		3-| 3 |-3 <br><br> 24'de 3 parça soldan öteler. 24'de 3 parça genişliği olur. 24'de 3 parça sağdan öteler. Bunlar varsayılan tanımlı 24p düzeninde oluşur.
+	<div data-gnl="3-| 6 |-3">
+		3-| 6 |-3 <br><br> 24'de 3 parça soldan öteler. 24'de 3 parça genişliği olur. 24'de 3 parça sağdan öteler. Bunlar varsayılan tanımlı 24p düzeninde oluşur.
 	</div>
-	<div data-gnl="3-| 3 |-3 12p-| |-12p">
-		3-| 3 |-3 12p-| |-12p <br><br> 12'de 3 parça soldan öteler. 24'de 3 parça genişliği olur. 12'de 3 parça sağdan öteler. Bunlar varsayılan tanımlı 24p düzeninde oluşur ancak yanlardan aralık vermeler 12p düzeninde oluşur.
-	</div>
-	<div data-gnl="3-| 1g |-3">
-		3-| 1g |-3 <br><br> 24'de 3 parça soldan öteler. 1 oranında genleşme olur. 24'de 3 parça sağdan öteler. Bunlar varsayılan tanımlı 24p düzeninde oluşur.
+	<div data-gnl="3-| 6 |-3 12p-| |-12p">
+		3-| 6 |-3 12p-| |-12p <br><br> 12'de 3 parça soldan öteler. 24'de 3 parça genişliği olur. 12'de 3 parça sağdan öteler. Bunlar varsayılan tanımlı 24p düzeninde oluşur ancak yanlardan aralık vermeler 12p düzeninde oluşur.
 	</div>
 	<div data-gnl="3-| 2g |-3">
-		3-| 2g |-3 <br><br> 24'de 3 parça soldan öteler. 2 oranında genleşme olur. Yani 1g tanımlı alanın 2 katı kadar genleşme sayımlaması yapılır. 24'de 3 parça sağdan öteler. Bunlar varsayılan tanımlı 24p düzeninde oluşur.
+		3-| 2g |-3 <br><br> 24'de 3 parça soldan öteler. 2 oranında genleşme olur. 24'de 3 parça sağdan öteler. Bunlar varsayılan tanımlı 24p düzeninde oluşur.
+	</div>
+	<div data-gnl="3-| 3g |-3">
+		3-| 3g |-3 <br><br> 24'de 3 parça soldan öteler. 3 oranında genleşme olur. Yani 2g tanımlı alana göre genleşme sayımlaması yapılır. 24'de 3 parça sağdan öteler. Bunlar varsayılan tanımlı 24p düzeninde oluşur.
 	</div>
 	{% endhighlight %}
 
