Rewrite Grow Layout document.

--- a/1.0/en/kap-orgusu/genlesme-duzeni.html
+++ b/1.0/en/kap-orgusu/genlesme-duzeni.html
@@ -3,7 +3,7 @@ layout: s1n0/default
 title: Grow Layout - Grid System
 ---
   <p class="girlik">
-    You can create grid fields simply by specifying the expansion. Grow layout is based on "CSS FLEX" feature. It is enough to write "NUMBERg" class to display attributes (data-gnl, data-md ...) for Grow layout use. NUMBER can be a value between 1 and 24. For example, you want to divide the page into two and make the left side twice as wide as the right side. For this you can define the attributes data-gnl = "2g" data-gnl = "1g".
+    You can create grid fields simply by specifying the expansion. Grow layout is based on "CSS FLEX" feature. It is enough to write "NUMBER %" class to display attributes (data-gnl, data-md ...) for Grow layout use. NUMBER can be a value between 1 and 24. For example, you want to divide the page into two and make the left side twice as wide as the right side. For this you can define the attributes data-gnl = "2 %" data-gnl = "1 %".
   </p>
   <h3>How to Use Grow Layout</h3>
   <p>
@@ -13,26 +13,26 @@ title: Grow Layout - Grid System
   <div class="örnek">
     <h3>Preview</h3>
     <div class="önizleme">
-      <div data-gnl="1g">
-        1g
+      <div data-gnl="1 %">
+        1 %
       </div>
-      <div data-gnl="4g">
-        4g
+      <div data-gnl="4 %">
+        4 %
       </div>
-      <div data-gnl="2g">
-        2g
+      <div data-gnl="2 %">
+        2 %
       </div>
     </div>
   </div>
   {% highlight html %}
-    <div data-gnl="1g">
-      1g
+    <div data-gnl="1 %">
+      1 %
     </div>
-    <div data-gnl="4g">
-      4g
+    <div data-gnl="4 %">
+      4 %
     </div>
-    <div data-gnl="2g">
-      2g
+    <div data-gnl="2 %">
+      2 %
     </div>
   {% endhighlight %}
 
@@ -48,43 +48,43 @@ title: Grow Layout - Grid System
     <h3>Preview</h3>
     <div class="önizleme">
     <div>
-      <div data-gnl="1g">
-        1g
+      <div data-gnl="1 %">
+        1 %
       </div>
-      <div data-gnl="4g">
-        4g
+      <div data-gnl="4 %">
+        4 %
       </div>
-      <div data-gnl="2g">
-        2g
+      <div data-gnl="2 %">
+        2 %
       </div>
-      <div><!--100% empty item--></div>
-      <div data-gnl="1g">
-        1g
+      <div><!--100% width empty item--></div>
+      <div data-gnl="1 %">
+        1 %
       </div>
-      <div data-gnl="4g">
-        4g
+      <div data-gnl="4 %">
+        4 %
       </div>
-      <div data-gnl="2g">
-        2g
+      <div data-gnl="2 %">
+        2 %
       </div>
-      <div data-gnl="1g">
-        1g
+      <div data-gnl="1 %">
+        1 %
       </div>
-      <div data-gnl="4g">
-        4g
+      <div data-gnl="4 %">
+        4 %
       </div>
-      <div data-gnl="2g">
-        2g
+      <div data-gnl="2 %">
+        2 %
       </div>
-      <div><!--100% empty item--></div>
-      <div data-gnl="1g">
-        1g
+      <div><!--100% width empty item--></div>
+      <div data-gnl="1 %">
+        1 %
       </div>
-      <div data-gnl="4g">
-        4g
+      <div data-gnl="4 %">
+        4 %
       </div>
-      <div data-gnl="2g">
-        2g
+      <div data-gnl="2 %">
+        2 %
       </div>
       <div data-gnl="1 2p">
         1 2p
@@ -94,43 +94,43 @@ title: Grow Layout - Grid System
 </div>
   {% highlight html %}
     <div>
-      <div data-gnl="1g">
-        1g
+      <div data-gnl="1 %">
+        1 %
       </div>
-      <div data-gnl="4g">
-        4g
+      <div data-gnl="4 %">
+        4 %
       </div>
-      <div data-gnl="2g">
-        2g
+      <div data-gnl="2 %">
+        2 %
       </div>
-      <div><!--100% empty item--></div>
-      <div data-gnl="1g">
-        1g
+      <div><!--100% width empty item--></div>
+      <div data-gnl="1 %">
+        1 %
       </div>
-      <div data-gnl="4g">
-        4g
+      <div data-gnl="4 %">
+        4 %
       </div>
-      <div data-gnl="2g">
-        2g
+      <div data-gnl="2 %">
+        2 %
       </div>
-      <div data-gnl="1g">
-        1g
+      <div data-gnl="1 %">
+        1 %
       </div>
-      <div data-gnl="4g">
-        4g
+      <div data-gnl="4 %">
+        4 %
       </div>
-      <div data-gnl="2g">
-        2g
+      <div data-gnl="2 %">
+        2 %
       </div>
-      <div><!--100% empty item--></div>
-      <div data-gnl="1g">
-        1g
+      <div><!--100% width empty item--></div>
+      <div data-gnl="1 %">
+        1 %
       </div>
-      <div data-gnl="4g">
-        4g
+      <div data-gnl="4 %">
+        4 %
       </div>
-      <div data-gnl="2g">
-        2g
+      <div data-gnl="2 %">
+        2 %
       </div>
       <div data-gnl="1 2p">
         1 2p
@@ -145,14 +145,14 @@ title: Grow Layout - Grid System
     <h3>Preview</h3>
     <div class="önizleme">
     <div>
-      <div data-gnl="1g">
-        1g
+      <div data-gnl="1 %">
+        1 %
       </div>
-      <div data-gnl="4g">
-        4g
+      <div data-gnl="4 %">
+        4 %
       </div>
-      <div data-gnl="2g">
-        2g
+      <div data-gnl="2 %">
+        2 %
       </div>
     </div>
     <div>
@@ -170,14 +170,14 @@ title: Grow Layout - Grid System
 </div>
   {% highlight html %}
     <div>
-      <div data-gnl="1g">
-        1g
+      <div data-gnl="1 %">
+        1 %
       </div>
-      <div data-gnl="4g">
-        4g
+      <div data-gnl="4 %">
+        4 %
       </div>
-      <div data-gnl="2g">
-        2g
+      <div data-gnl="2 %">
+        2 %
       </div>
     </div>
     <div>
