--- a/1.0/tr/kap-orgusu/genlesme-duzeni.html
+++ b/1.0/tr/kap-orgusu/genlesme-duzeni.html
@@ -3,7 +3,7 @@ layout: s1n0/varsayilan
 title: Genleşme Düzeni - Kap Örgüsü
 ---
 
-  <p>Basit şekilde genleşmeler belirterek kap alanları oluşturabilirsiniz. Genleşme düzeni "CSS FLEX" özelliği üzerine geliştirilmiştir. genleşme örgüsünün kullanımı için ekran özniteliklerine (data-gnl, data-mnk ...) "<span data-metin="ana">SAYIg</span>" sınıfını yazmanız yeterlidir. SAYI 1 ile 24 arasında değer alabilir. Örneğin sayfayı ikiye ayırıp sol tarafın sağ taraftan iki kat daha geniş olmasını istiyorsunuz. Bunun için data-gnl="2g" data-gnl="1g" öznitelikleri tanımlaybilirsiniz.</p>
+  <p>Basit şekilde genleşmeler belirterek kap alanları oluşturabilirsiniz. Genleşme düzeni "CSS FLEX" özelliği üzerine geliştirilmiştir. genleşme örgüsünün kullanımı için ekran özniteliklerine (data-gnl, data-mnk ...) "<span data-metin="ana">SAYI %</span>" sınıfını yazmanız yeterlidir. SAYI 1 ile 24 arasında değer alabilir. Örneğin sayfayı ikiye ayırıp sol tarafın sağ taraftan iki kat daha geniş olmasını istiyorsunuz. Bunun için data-gnl="2 %" data-gnl="1 %" öznitelikleri tanımlaybilirsiniz.</p>
 
   <h3>Genleşme Düzeni Nasıl Kullanılır?</h3>
   <p>Ekranların hepsinde üç sütun görünümünde bir düzen oluşturalım. Örnek olarak düzen dağılımını 1 4 2 şeklinde yapalım.</p>
@@ -11,26 +11,26 @@ title: Genleşme Düzeni - Kap Örgüsü
   <div class="örnek">
     <h3>Önizleme</h3>
     <div class="önizleme">
-      <div data-gnl="1g">
-        1g
+      <div data-gnl="1 %">
+        1 %
       </div>
-      <div data-gnl="4g">
-        4g
+      <div data-gnl="4 %">
+        4 %
       </div>
-      <div data-gnl="2g">
-        2g
+      <div data-gnl="2 %">
+        2 %
       </div>
     </div>
   </div>
   {% highlight html %}
-    <div data-gnl="1g">
-      1g
+    <div data-gnl="1 %">
+      1 %
     </div>
-    <div data-gnl="4g">
-      4g
+    <div data-gnl="4 %">
+      4 %
     </div>
-    <div data-gnl="2g">
-      2g
+    <div data-gnl="2 %">
+      2 %
     </div>
   {% endhighlight %}
   <p></p>
@@ -43,43 +43,43 @@ title: Genleşme Düzeni - Kap Örgüsü
     <h3>Önizleme</h3>
     <div class="önizleme">
     <div>
-      <div data-gnl="1g">
-        1g
+      <div data-gnl="1 %">
+        1 %
       </div>
-      <div data-gnl="4g">
-        4g
+      <div data-gnl="4 %">
+        4 %
       </div>
-      <div data-gnl="2g">
-        2g
+      <div data-gnl="2 %">
+        2 %
       </div>
-      <div><!--dürmek amacıyla oluşturulan 100% genişlik--></div>
-      <div data-gnl="1g">
-        1g
+      <div><!--alta dürmek amacıyla oluşturulan 100% genişlik--></div>
+      <div data-gnl="1 %">
+        1 %
       </div>
-      <div data-gnl="4g">
-        4g
+      <div data-gnl="4 %">
+        4 %
       </div>
-      <div data-gnl="2g">
-        2g
+      <div data-gnl="2 %">
+        2 %
       </div>
-      <div data-gnl="1g">
-        1g
+      <div data-gnl="1 %">
+        1 %
       </div>
-      <div data-gnl="4g">
-        4g
+      <div data-gnl="4 %">
+        4 %
       </div>
-      <div data-gnl="2g">
-        2g
+      <div data-gnl="2 %">
+        2 %
       </div>
-      <div><!--dürmek amacıyla oluşturulan 100% genişlik--></div>
-      <div data-gnl="1g">
-        1g
+      <div><!--alta dürmek amacıyla oluşturulan 100% genişlik--></div>
+      <div data-gnl="1 %">
+        1 %
       </div>
-      <div data-gnl="4g">
-        4g
+      <div data-gnl="4 %">
+        4 %
       </div>
-      <div data-gnl="2g">
-        2g
+      <div data-gnl="2 %">
+        2 %
       </div>
       <div data-gnl="1 2p">
         1 2p
@@ -89,43 +89,43 @@ title: Genleşme Düzeni - Kap Örgüsü
 </div>
   {% highlight html %}
     <div>
-      <div data-gnl="1g">
-        1g
+      <div data-gnl="1 %">
+        1 %
       </div>
-      <div data-gnl="4g">
-        4g
+      <div data-gnl="4 %">
+        4 %
       </div>
-      <div data-gnl="2g">
-        2g
-      </div>
-      <div><!--dürmek amacıyla oluşturulan 100% genişlik--></div>
-      <div data-gnl="1g">
-        1g
-      </div>
-      <div data-gnl="4g">
-        4g
-      </div>
-      <div data-gnl="2g">
-        2g
-      </div>
-      <div data-gnl="1g">
-        1g
-      </div>
-      <div data-gnl="4g">
-        4g
-      </div>
-      <div data-gnl="2g">
-        2g
+      <div data-gnl="2 %">
+        2 %
       </div>
       <div><!--dürmek amacıyla oluşturulan 100% genişlik--></div>
-      <div data-gnl="1g">
-        1g
+      <div data-gnl="1 %">
+        1 %
       </div>
-      <div data-gnl="4g">
-        4g
+      <div data-gnl="4 %">
+        4 %
       </div>
-      <div data-gnl="2g">
-        2g
+      <div data-gnl="2 %">
+        2 %
+      </div>
+      <div data-gnl="1 %">
+        1 %
+      </div>
+      <div data-gnl="4 %">
+        4 %
+      </div>
+      <div data-gnl="2 %">
+        2 %
+      </div>
+      <div><!--dürmek amacıyla oluşturulan 100% genişlik--></div>
+      <div data-gnl="1 %">
+        1 %
+      </div>
+      <div data-gnl="4 %">
+        4 %
+      </div>
+      <div data-gnl="2 %">
+        2 %
       </div>
       <div data-gnl="1 2p">
         1 2p
@@ -142,14 +142,14 @@ title: Genleşme Düzeni - Kap Örgüsü
     <h3>Önizleme</h3>
     <div class="önizleme">
     <div>
-      <div data-gnl="1g">
-        1g
+      <div data-gnl="1 %">
+        1 %
       </div>
-      <div data-gnl="4g">
-        4g
+      <div data-gnl="4 %">
+        4 %
       </div>
-      <div data-gnl="2g">
-        2g
+      <div data-gnl="2 %">
+        2 %
       </div>
     </div>
     <div>
@@ -167,14 +167,14 @@ title: Genleşme Düzeni - Kap Örgüsü
 </div>
   {% highlight html %}
     <div>
-      <div data-gnl="1g">
-        1g
+      <div data-gnl="1 %">
+        1 %
       </div>
-      <div data-gnl="4g">
-        4g
+      <div data-gnl="4 %">
+        4 %
       </div>
-      <div data-gnl="2g">
-        2g
+      <div data-gnl="2 %">
+        2 %
       </div>
     </div>
     <div>
