--- a/1.0/en/kurulum.html
+++ b/1.0/en/kurulum.html
@@ -7,6 +7,7 @@ title: Installation
     </p>
     <p data-gnl>
       <a data-basmal data-gnl="_o 0" class="birincil" href="https://github.com/data-deveb/data-deveb.github.io/releases/download/deveb-1.0-tr/deveb-s1n0.zip" style="border:1px solid purple; padding:10px;">DOWNLOAD: deveb-s1n0.zip</a>
+      <a data-basmal data-gnl="_o 0" class="birincil" href="https://github.com/data-deveb/data-deveb.github.io/releases/download/deveb-1.0/deveb-s1n0n10.zip" style="border:1px solid purple; padding:10px;">DOWNLOAD: deveb-s1n0n10.zip</a>
     </p>
 
     <h2><span class="simget">deveb</span> Türkçe Sürüm</h2>
