--- a/1.0/tr/kap-orgusu/aralik-duzeni.html
+++ b/1.0/tr/kap-orgusu/aralik-duzeni.html
@@ -21,38 +21,38 @@ title: Aralık Düzeni
 	<div class="örnek">
 	<h3>Önizleme</h3>
 	<div class="önizleme">
-	  <div data-gnl="3-| 3 |-3 12p">
-	  	3-| 3 |-3 12p
+	  <div data-gnl="3-| 3 |-3 24p">
+	  	3-| 3 |-3 24p
 	  </div>
 	  <div data-gnl="3-| 6 |-3">
 	    3-| 6 |-3
 	  </div>
-	  <div data-gnl="3-| 6 |-3 12p-| |-12p">
-	    3-| 6 |-3 12p-| |-12p
+	  <div data-gnl="3-| 6 |-3 24p-| |-24p">
+	    3-| 6 |-3 24p-| |-24p
 	  </div>
-	  <div data-gnl="3-| 2g |-3">
-	    3-| 2g |-3
+	  <div data-gnl="3-| 2 % |-3">
+	    3-| 2 % |-3
 	  </div>
-	  <div data-gnl="3-| 3g |-3">
-	    3-| 3g |-3
+	  <div data-gnl="3-| 3 % |-3">
+	    3-| 3 % |-3
 	  </div>
 	</div>
 	</div>
 	{% highlight html %}
-	<div data-gnl="3-| 3 |-3 12p">
-	  3-| 3 |-3 12p
+	<div data-gnl="3-| 3 |-3 24p">
+	  3-| 3 |-3 24p
 	</div>
 	<div data-gnl="3-| 6 |-3">
 	  3-| 6 |-3
 	</div>
-	<div data-gnl="3-| 6 |-3 12p-| |-12p">
-	  3-| 6 |-3 12p-| |-12p
+	<div data-gnl="3-| 6 |-3 24p-| |-24p">
+	  3-| 6 |-3 24p-| |-24p
 	</div>
-	<div data-gnl="3-| 2g |-3">
-	  3-| 2g |-3
+	<div data-gnl="3-| 2 % |-3">
+	  3-| 2 % |-3
 	</div>
-	<div data-gnl="3-| 3g |-3">
-	  3-| 3g |-3
+	<div data-gnl="3-| 3 % |-3">
+	  3-| 3 % |-3
 	</div>
 	{% endhighlight %}
 
